--- a/src/Services/FinancialProduct/Api.FinancialProduct/appsettings.Development.json
+++ b/src/Services/FinancialProduct/Api.FinancialProduct/appsettings.Development.json
@@ -8,5 +8,8 @@
   "DatabaseSettings": {
     "DatabaseName": "investment_db",
     "ConnectionString": "mongodb://root:example@localhost:27017?authSource=admin"
+  },
+  "DistributedCacheSettings": {
+    "ConnectionString": "localhost,port:6379,password=Example1234!"
   }
 }
