--- a/src/Services/FinancialProduct/Api.FinancialProduct.Infrastructure/Api.FinancialProduct.Infrastructure.csproj
+++ b/src/Services/FinancialProduct/Api.FinancialProduct.Infrastructure/Api.FinancialProduct.Infrastructure.csproj
@@ -4,6 +4,9 @@
     <ProjectReference Include="..\..\..\Shared\InvestmentManager.Shared.Utilities\InvestmentManager.Shared.Utilities.csproj" />
     <ProjectReference Include="..\..\..\Shared\InvestmentManager.Shared.Configurations\InvestmentManager.Shared.Configurations.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Scrutor" Version="4.2.2" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
