--- a/src/Services/Auth/Api.Auth/appsettings.Development.json
+++ b/src/Services/Auth/Api.Auth/appsettings.Development.json
@@ -17,5 +17,10 @@
     "SecretKey": "wJwP7gJf6mg1h/f6bF/5hP5J3Gg6e6ddF+g83a6phH8=",
     "Issuer": "http://localhost:5188",
     "ExpirationInMinutes": 30
+  },
+  "AesSettings":
+  {
+    "Key": "7DhJJdWk7wCDxW5LGKG4jOfuBXccI8vQZIQBafaP8gc=",
+    "Iv": "vINQa+6uXocjCmsVo4yxwQ=="
   }
 }
