--- a/src/Shared/InvestmentManager.Shared.Configurations/InvestmentManager.Shared.Configurations.csproj
+++ b/src/Shared/InvestmentManager.Shared.Configurations/InvestmentManager.Shared.Configurations.csproj
@@ -5,9 +5,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Middleware" Version="8.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InvestmentManager.Shared.Utilities\InvestmentManager.Shared.Utilities.csproj" />
