--- a/src/Shared/InvestmentManager.Shared.Utilities/InvestmentManager.Shared.Utilities.csproj
+++ b/src/Shared/InvestmentManager.Shared.Utilities/InvestmentManager.Shared.Utilities.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 </Project>
