--- a/src/Services/FinancialProduct/Api.FinancialProduct.Infrastructure/Api.FinancialProduct.Infrastructure.csproj
+++ b/src/Services/FinancialProduct/Api.FinancialProduct.Infrastructure/Api.FinancialProduct.Infrastructure.csproj
@@ -3,6 +3,7 @@
     <ProjectReference Include="..\Api.FinancialProduct.Domain\Api.FinancialProduct.Domain.csproj" />
     <ProjectReference Include="..\..\..\Shared\InvestmentManager.Shared.Utilities\InvestmentManager.Shared.Utilities.csproj" />
     <ProjectReference Include="..\..\..\Shared\InvestmentManager.Shared.Configurations\InvestmentManager.Shared.Configurations.csproj" />
+    <ProjectReference Include="..\Api.FinancialProduct.Application\Api.FinancialProduct.Application.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Scrutor" Version="4.2.2" />
