--- a/src/Services/FinancialProduct/Api.FinancialProduct/appsettings.Development.json
+++ b/src/Services/FinancialProduct/Api.FinancialProduct/appsettings.Development.json
@@ -17,5 +17,9 @@
     "SecretKey": "wJwP7gJf6mg1h/f6bF/5hP5J3Gg6e6ddF+g83a6phH8=",
     "Issuer": "http://localhost:5188",
     "ExpirationInMinutes": 30
+  },
+  "NegotiationApiSettings":
+  {
+    "BaseUrl": "http://localhost:5106"
   }
 }
