--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,10 @@ services:
       retries: 5
       start_period: 30s
       timeout: 5s
+      
+  mailhog:
+    image: mailhog/mailhog
+    container_name: 'mailhog'
+    ports:
+      - "1025:1025"
+      - "8025:8025"
