--- a/src/Services/Notification/Job.Notification/appsettings.json
+++ b/src/Services/Notification/Job.Notification/appsettings.json
@@ -1,11 +1,11 @@
 {
     "DatabaseSettings": {
       "DatabaseName": "investment_db",
-      "ConnectionString": "mongodb://root:example@localhost:27017?authSource=admin"
+      "ConnectionString": "mongodb://root:example@mongo:27017?authSource=admin"
     },
     "CronExpression": "0 0 12 * * ?",
     "EmailSettings": {
-      "SmtpServer": "localhost",
+      "SmtpServer": "mailhog",
       "SmtpPort": 1025,
       "SenderEmail": "emailsender@noreply.com",
       "SenderName": "Email Sender",
