--- a/src/Services/Auth/Api.Auth/appsettings.json
+++ b/src/Services/Auth/Api.Auth/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "DatabaseSettings": {
+    "DatabaseName": "investment_db",
+    "ConnectionString": "mongodb://root:example@mongo:27017?authSource=admin"
+  },
+  "DistributedCacheSettings": {
+    "ConnectionString": "redis,port:6379,password=Example1234!"
+  },
+  "JwtSettings":
+  {
+    "SecretKey": "wJwP7gJf6mg1h/f6bF/5hP5J3Gg6e6ddF+g83a6phH8=",
+    "Issuer": "http://auth_api:80",
+    "ExpirationInMinutes": 30
+  },
+  "AesSettings":
+  {
+    "Key": "7DhJJdWk7wCDxW5LGKG4jOfuBXccI8vQZIQBafaP8gc=",
+    "Iv": "vINQa+6uXocjCmsVo4yxwQ=="
+  }
 }
