--- a/src/Services/FinancialProduct/Api.FinancialProduct/appsettings.json
+++ b/src/Services/FinancialProduct/Api.FinancialProduct/appsettings.json
@@ -5,5 +5,21 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "DatabaseSettings": {
+    "DatabaseName": "investment_db",
+    "ConnectionString": "mongodb://root:example@mongo:27017?authSource=admin"
+  },
+  "DistributedCacheSettings": {
+    "ConnectionString": "redis,port:6379,password=Example1234!"
+  },
+  "JwtSettings":
+  {
+    "SecretKey": "wJwP7gJf6mg1h/f6bF/5hP5J3Gg6e6ddF+g83a6phH8=",
+    "Issuer": "http://auth_api:80",
+    "ExpirationInMinutes": 30
+  },
+  "NegotiationApiSettings":
+  {
+    "BaseUrl": "http://negotiation_api:80"
+  }
 }
