--- a/src/Services/Negotiation/Api.Negotiation/Dockerfile
+++ b/src/Services/Negotiation/Api.Negotiation/Dockerfile
@@ -1,11 +1,11 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-RUN mkdir /app
-WORKDIR /app
-RUN echo "Diretório atual: $(pwd)"
-COPY . .
-RUN dotnet restore Api.Negotiation/*.csproj
 
-WORKDIR /app/Api.Negotiation
+WORKDIR /app
+
+COPY . .
+RUN dotnet restore ./Services/Negotiation/Api.Negotiation/Api.Negotiation.csproj
+
+WORKDIR /app/Services/Negotiation/Api.Negotiation
 RUN dotnet publish -c release -o /dist --no-restore
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
