--- a/src/Services/Notification/Job.Notification/Dockerfile
+++ b/src/Services/Notification/Job.Notification/Dockerfile
@@ -3,9 +3,9 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
 COPY . .
-RUN dotnet restore ./src/Services/Notification/Job.Notification/*.csproj
+RUN dotnet restore ./Services/Notification/Job.Notification/Job.Notification.csproj
 
-WORKDIR /app/Job.Notification
+WORKDIR /app/Services/Notification/Job.Notification
 RUN dotnet publish -c release -o /dist --no-restore
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
