--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       retries: 5
       start_period: 30s
       timeout: 5s
+    networks:
+      - load-balancing
 
   redis:
     image: redis:latest
@@ -27,6 +29,8 @@ services:
       retries: 5
       start_period: 30s
       timeout: 5s
+    networks:
+      - load-balancing
       
   nginx:
     image: nginx:latest
@@ -35,6 +39,10 @@ services:
       - ./scripts/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "3000:80"
+    depends_on:
+      - product_api
+    networks:
+      - load-balancing
 
   mailhog:
     image: mailhog/mailhog
@@ -42,6 +50,8 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+    networks:
+      - load-balancing
 
   auth_api:
     build:
@@ -53,6 +63,8 @@ services:
       - 5000:8080
     depends_on:
       - mongo
+    networks:
+      - load-balancing
 
   product_api:
     build:
@@ -66,7 +78,8 @@ services:
     depends_on:
       - mongo
       - redis
-      - nginx
+    networks:
+      - load-balancing
 
   negotiation_api:
     build:
@@ -79,7 +92,8 @@ services:
     depends_on:
       - mongo
       - redis
-      - nginx
+    networks:
+      - load-balancing
 
   notification_job:
     build:
@@ -90,3 +104,8 @@ services:
     depends_on:
       - mailhog
       - mongo
+    networks:
+      - load-balancing
+
+networks:
+  load-balancing:
